--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -9,7 +9,7 @@
 
 
 
-<ion-menu [content]="mycontent" type="overlay">
+<ion-menu [content]="mycontent">
   <ion-content no-bounce>
     <ion-list>
       <ion-item>
@@ -53,9 +53,6 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-    <ion-infinite-scroll-content></ion-infinite-scroll-content>
-  </ion-infinite-scroll> -->
 </ion-content>
 
 
